--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/Octopus-Logo-v3.1.png" />
+    <link rel="icon" href="%PUBLIC_URL%/BOF_LOGO_COLOR.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Page for project octopus, a game with a new key mechanic"
+      content="Page for Branches Of Fate, a game with a new key mechanic"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -25,11 +25,17 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!-- Links to the fonts-->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Secular+One&family=Workbench&display=swap" rel="stylesheet">
-    <title>Project Octopus</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Secular+One&family=Workbench&display=swap"
+      rel="stylesheet"
+    />
+    <title>Branches Of Fate</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
